Fix minor UI issues on mobile

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2467,20 +2467,17 @@ body {
 }
 
 .loader {
-  margin: 60px auto;
   font-size: 10px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-indent: -9999em;
+  top: calc( 50%);
+  left: calc( 50% - 3.5em);
   border-top: 1.1em solid rgba(255, 255, 255, 0.2);
   border-right: 1.1em solid rgba(255, 255, 255, 0.2);
   border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
   border-left: 1.1em solid rgba(255, 255, 255, 0.8);
-  transform: translateZ(0);
+  transform: translateZ(0) translate(-50%, -50%);
   -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
+          animation: load8 1.1s infinite linear;
 }
 
 @-webkit-keyframes load8 {
