--- a/resources/sass/partials/_loader.scss
+++ b/resources/sass/partials/_loader.scss
@@ -6,40 +6,30 @@
     height: 7em;
 }
 .loader {
-    margin: 60px auto;
     font-size: 10px;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    text-indent: -9999em;
+    top: calc( 50% );
+    left: calc( 50% - 3.5em );
     border-top: 1.1em solid rgba(255, 255, 255, 0.2);
     border-right: 1.1em solid rgba(255, 255, 255, 0.2);
     border-bottom: 1.1em solid rgba(255, 255, 255, 0.2);
     border-left: 1.1em solid rgba(255, 255, 255, 0.8);;
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation: load8 1.1s infinite linear;
+    transform: translateZ(0) translate(-50%,-50%);
     animation: load8 1.1s infinite linear;
 }
 @-webkit-keyframes load8 {
     0% {
-        -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
     100% {
-        -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
 @keyframes load8 {
     0% {
-        -webkit-transform: rotate(0deg);
         transform: rotate(0deg);
     }
     100% {
-        -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
     }
 }
